javaparser-model/src/test/resources/com/github/javaparser/model/source/surface/parse-error/output.model
Error: com/github/javaparser/model/source/surface/parse-error/src/acme/A.java
    Encountered " "package" "package "" at line 1, column 1.
    Was expecting one of:
        <EOF> 
        "abstract" ...
        "class" ...
        "enum" ...
        "final" ...
        "import" ...
        "interface" ...
        "native" ...
        "private" ...
        "protected" ...
        "public" ...
        "static" ...
        "strictfp" ...
        "synchronized" ...
        "transient" ...
        "volatile" ...
        ";" ...
        "@" ...
        "\u001a" ...
        "@" ...
        "@" ...
        "@" ...
        
